--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"pda/pheanstalk": "2.0.*",
         "bllim/datatables": "*",
 		"monolog/monolog": "~1.13@dev",
-		"maatwebsite/excel": "~1.3.0"
+		"maatwebsite/excel": "~1.3.0",
+		"liebig/cron": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
